tests/miniJava/neg/000406_mutation.MiniJava
class java { public static void Main ( String [ ] class java { public static void Main ( String [ ] java ) { { } } } java ) { { } } }
